force-app/main/default/objects/AutomationControlSettings__c/AutomationControlSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds different values used by Flow or Apex automations</description>
    <label>Automation Control Settings</label>
</CustomObject>