force-app/main/default/objects/AutomationControlSettings__c/fields/Commission_Clawback_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Commission_Clawback_Period_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>This will be how many days a clawback commission can happen from the original commission record.</description>
    <inlineHelpText>This will be how many days a clawback commission can happen from the original commission record.</inlineHelpText>
    <label>Commission Clawback Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>