force-app/main/default/objects/AutomationControlSettings__c/fields/Commissions_Campaigned_Opportunities_Aut__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Campaigned_Opportunities_Aut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will turn on or off the function in the automation where the Campaigned Opportunity commissions are auto approved</description>
    <inlineHelpText>Clawbacks won’t be auto approved even if there is a Campaign set.</inlineHelpText>
    <label>Commissions Campaign Opps Auto Approved</label>
    <type>Checkbox</type>
</CustomField>