force-app/main/default/objects/AutomationControlSettings__c/fields/Commissions_Exclude_Tax_Products__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Exclude_Tax_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissions Exclude Tax Products</label>
    <type>Checkbox</type>
</CustomField>