force-app/main/default/objects/AutomationControlSettings__c/fields/Commissions_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Threshold_Amount__c</fullName>
    <description>This is the amount needed to reach to become Commissionable. This amount is taken out of the Commissionable Sales total before calculating the percentage.</description>
    <inlineHelpText>This is the amount needed to reach to become Commissionable. This amount is taken out of the Commissionable Sales total before calculating the percentage.</inlineHelpText>
    <label>Commissions Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>