force-app/main/default/objects/AutomationControlSettings__c/fields/Do_Not_Sync_to_Biocanic__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_to_Biocanic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents syncing patient data to Biocanic when checked.</description>
    <inlineHelpText>Check to stop syncing patient data and agreements to Biocanic.</inlineHelpText>
    <label>Do Not Sync to Biocanic</label>
    <type>Checkbox</type>
</CustomField>