force-app/main/default/objects/AutomationControlSettings__c/fields/EHR_Default_Tags__c.field-meta.xml
<CustomField>
    <fullName>EHR_Default_Tags__c</fullName>
    <description>JSON Formatted String</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will be used to set the default tags when uploading any documents to the EHR.</inlineHelpText>
    <label>EHR Default Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>